// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageValidator shows a validator profile information errors signing info is missing 1`] = `
<tmpage-stub
  class="small"
  data-title="Validator"
  hideheader="true"
  loaded="true"
  managed="true"
  subtitle=""
  title=""
>
  <template>
    <div
      class="status-container"
    >
      <span
        class="validator-status green"
      >
        Active
      </span>
    </div>
     
    <tr
      class="li-validator"
    >
      <td
        class="data-table__row__info"
      >
        <apolloquery-stub
          debounce="0"
          options="[object Object]"
          prefetch="true"
          query="[object Object]"
          tag="div"
          throttle="0"
          update="function () { [native code] }"
          variables="[object Object]"
        />
         
        <div
          class="validator-info"
        >
          <h3
            class="li-validator-name"
          >
            
            mr_mounty
          
          </h3>
           
          <!---->
        </div>
      </td>
    </tr>
     
    <div
      class="button-container"
    >
      <tmbtn-stub
        id="delegation-btn"
        value="Stake"
      />
       
      <tmbtn-stub
        disabled="true"
        id="undelegation-btn"
        type="secondary"
        value="Unstake"
      />
    </div>
     
    <div
      class="row"
    >
      <dl
        class="info_dl"
      >
        <dt>
          Description
        </dt>
         
        <dd
          class="info_dl__text-box"
        >
          
          Mr Mounty
        
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Website
        </dt>
         
        <dd>
          <a
            href="https://www.monty.ca"
            id="validator-website"
            rel="nofollow noreferrer noopener"
            target="_blank"
          >
            https://www.monty.ca
          </a>
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Validator Address
        </dt>
         
        <dd>
          <bech32-stub
            address="cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw"
          />
        </dd>
      </dl>
    </div>
     
    <div
      class="row row-condensed"
    >
      <dl
        class="info_dl"
      >
        <dt>
          Rewards
        </dt>
         
        <dd
          id="page-profile__rewards"
        >
          
          2.26%
        
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Voting Power / Total Stake
        </dt>
         
        <dd
          id="page-profile__power"
        >
          
          0.33% /
          0
        
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Self Stake
        </dt>
         
        <dd
          id="page-profile__self-bond"
        >
          
          1.00% / 10,000
        
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Validator Since
        </dt>
         
        <dd>
          
          Block #
        
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Uptime / Missed Blocks
        </dt>
         
        <dd
          id="page-profile__uptime"
        >
          
          99.6% /
          2
        
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Current Commission Rate
        </dt>
         
        <dd>
          5.00%
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Max Commission Rate
        </dt>
         
        <dd>
          10.00%
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Max Daily Commission Change
        </dt>
         
        <dd>
          0.50%
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Last Commission Change
        </dt>
         
        <dd>
          a few seconds ago
        </dd>
      </dl>
    </div>
     
    <delegationmodal-stub
      denom="STAKE"
      fromoptions="[object Object]"
      to="cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw"
      validator="[object Object]"
    />
     
    <undelegationmodal-stub
      denom="STAKE"
      maximum="0"
      to="cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9"
      validator="[object Object]"
    />
  </template>
</tmpage-stub>
`;

exports[`PageValidator shows a validator profile information if user has signed in 1`] = `
<tmpage-stub
  class="small"
  data-title="Validator"
  hideheader="true"
  loaded="true"
  managed="true"
  subtitle=""
  title=""
>
  <template>
    <div
      class="status-container"
    >
      <span
        class="validator-status green"
      >
        Active
      </span>
    </div>
     
    <tr
      class="li-validator"
    >
      <td
        class="data-table__row__info"
      >
        <apolloquery-stub
          debounce="0"
          options="[object Object]"
          prefetch="true"
          query="[object Object]"
          tag="div"
          throttle="0"
          update="function () { [native code] }"
          variables="[object Object]"
        />
         
        <div
          class="validator-info"
        >
          <h3
            class="li-validator-name"
          >
            
            mr_mounty
          
          </h3>
           
          <!---->
        </div>
      </td>
    </tr>
     
    <div
      class="button-container"
    >
      <tmbtn-stub
        id="delegation-btn"
        value="Stake"
      />
       
      <tmbtn-stub
        disabled="true"
        id="undelegation-btn"
        type="secondary"
        value="Unstake"
      />
    </div>
     
    <div
      class="row"
    >
      <dl
        class="info_dl"
      >
        <dt>
          Description
        </dt>
         
        <dd
          class="info_dl__text-box"
        >
          
          Mr Mounty
        
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Website
        </dt>
         
        <dd>
          <a
            href="https://www.monty.ca"
            id="validator-website"
            rel="nofollow noreferrer noopener"
            target="_blank"
          >
            https://www.monty.ca
          </a>
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Validator Address
        </dt>
         
        <dd>
          <bech32-stub
            address="cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw"
          />
        </dd>
      </dl>
    </div>
     
    <div
      class="row row-condensed"
    >
      <dl
        class="info_dl"
      >
        <dt>
          Rewards
        </dt>
         
        <dd
          id="page-profile__rewards"
        >
          
          2.26%
        
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Voting Power / Total Stake
        </dt>
         
        <dd
          id="page-profile__power"
        >
          
          0.33% /
          0
        
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Self Stake
        </dt>
         
        <dd
          id="page-profile__self-bond"
        >
          
          1.00% / 10,000
        
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Validator Since
        </dt>
         
        <dd>
          
          Block #
        
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Uptime / Missed Blocks
        </dt>
         
        <dd
          id="page-profile__uptime"
        >
          
          99.6% /
          2
        
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Current Commission Rate
        </dt>
         
        <dd>
          5.00%
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Max Commission Rate
        </dt>
         
        <dd>
          10.00%
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Max Daily Commission Change
        </dt>
         
        <dd>
          0.50%
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Last Commission Change
        </dt>
         
        <dd>
          a few seconds ago
        </dd>
      </dl>
    </div>
     
    <delegationmodal-stub
      denom="STAKE"
      fromoptions="[object Object]"
      to="cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw"
      validator="[object Object]"
    />
     
    <undelegationmodal-stub
      denom="STAKE"
      maximum="0"
      to="cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9"
      validator="[object Object]"
    />
  </template>
</tmpage-stub>
`;

exports[`PageValidator shows a validator profile information if user hasn't signed in 1`] = `
<tmpage-stub
  class="small"
  data-title="Validator"
  hideheader="true"
  loaded="true"
  managed="true"
  subtitle=""
  title=""
>
  <template>
    <div
      class="status-container"
    >
      <span
        class="validator-status green"
      >
        Active
      </span>
    </div>
     
    <tr
      class="li-validator"
    >
      <td
        class="data-table__row__info"
      >
        <apolloquery-stub
          debounce="0"
          options="[object Object]"
          prefetch="true"
          query="[object Object]"
          tag="div"
          throttle="0"
          update="function () { [native code] }"
          variables="[object Object]"
        />
         
        <div
          class="validator-info"
        >
          <h3
            class="li-validator-name"
          >
            
            mr_mounty
          
          </h3>
           
          <!---->
        </div>
      </td>
    </tr>
     
    <div
      class="button-container"
    >
      <tmbtn-stub
        id="delegation-btn"
        value="Stake"
      />
       
      <tmbtn-stub
        disabled="true"
        id="undelegation-btn"
        type="secondary"
        value="Unstake"
      />
    </div>
     
    <div
      class="row"
    >
      <dl
        class="info_dl"
      >
        <dt>
          Description
        </dt>
         
        <dd
          class="info_dl__text-box"
        >
          
          Mr Mounty
        
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Website
        </dt>
         
        <dd>
          <a
            href="https://www.monty.ca"
            id="validator-website"
            rel="nofollow noreferrer noopener"
            target="_blank"
          >
            https://www.monty.ca
          </a>
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Validator Address
        </dt>
         
        <dd>
          <bech32-stub
            address="cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw"
          />
        </dd>
      </dl>
    </div>
     
    <div
      class="row row-condensed"
    >
      <dl
        class="info_dl"
      >
        <dt>
          Rewards
        </dt>
         
        <dd
          id="page-profile__rewards"
        >
          
          2.26%
        
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Voting Power / Total Stake
        </dt>
         
        <dd
          id="page-profile__power"
        >
          
          0.33% /
          0
        
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Self Stake
        </dt>
         
        <dd
          id="page-profile__self-bond"
        >
          
          1.00% / 10,000
        
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Validator Since
        </dt>
         
        <dd>
          
          Block #
        
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Uptime / Missed Blocks
        </dt>
         
        <dd
          id="page-profile__uptime"
        >
          
          99.6% /
          2
        
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Current Commission Rate
        </dt>
         
        <dd>
          5.00%
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Max Commission Rate
        </dt>
         
        <dd>
          10.00%
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Max Daily Commission Change
        </dt>
         
        <dd>
          0.50%
        </dd>
      </dl>
       
      <dl
        class="info_dl"
      >
        <dt>
          Last Commission Change
        </dt>
         
        <dd>
          a few seconds ago
        </dd>
      </dl>
    </div>
     
    <delegationmodal-stub
      denom="STAKE"
      fromoptions=""
      to="cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw"
      validator="[object Object]"
    />
     
    <undelegationmodal-stub
      denom="STAKE"
      maximum="0"
      to=""
      validator="[object Object]"
    />
  </template>
</tmpage-stub>
`;

exports[`PageValidator shows a validator profile information shows a validator as an inactive candidate if he has no voting_power 1`] = `"Inactive"`;

exports[`PageValidator shows a validator profile information shows that a validator is jailed 1`] = `"Jailed"`;

exports[`delegationTargetOptions always shows wallet in the first position 1`] = `
Array [
  Object {
    "address": "cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9",
    "key": "My Wallet - cosmos…3p4mqpjyrm5ctpesxxn9",
    "maximum": 1337,
    "value": 0,
  },
]
`;

exports[`delegationTargetOptions hides displayed validator if bonded 1`] = `
Array [
  Object {
    "address": "cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9",
    "key": "My Wallet - cosmos…3p4mqpjyrm5ctpesxxn9",
    "maximum": 1337,
    "value": 0,
  },
]
`;

exports[`delegationTargetOptions shows bonded validators for redelegation options 1`] = `
Array [
  Object {
    "address": "cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9",
    "key": "My Wallet - cosmos…3p4mqpjyrm5ctpesxxn9",
    "maximum": 1337,
    "value": 0,
  },
  Object {
    "address": "cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctplpn3au",
    "key": "good_greg - cosmosvaladdr…3p4mqpjyrm5ctplpn3au",
    "maximum": 5,
    "value": 1,
  },
]
`;
